2005-06-14  Vincent Noel  <vnoel@cox.net>

	* userprefs.c: (prefs_create_defaults): Thinko.

2005-06-14  Vincent Noel  <vnoel@cox.net>

	* userprefs.c: (prefs_create_defaults):
	Don't crash on first run (please)
	Should fix bug #307642.

2005-06-09  Vincent Noel  <vnoel@cox.net>

	* logrtns.c:
	* logview-findbar.c: Apply some warning fixes from Kjartan Maraas
	in bug #170841.

2005-05-27  Vincent Noel  <vnoel@cox.net>

	* log_repaint.c: (logview_update_version_bar):
	* log_repaint.h:
	* logrtns.c: (OpenLogFile), (CloseLog):
	* logrtns.h:
	* logview.c: (logview_select_log), (logview_add_log_from_name),
	(logview_add_logs_from_names), (logview_version_selector_changed),
	(CreateMainWin), (FileSelectResponse):
	* logview.h:
	* userprefs.c: (prefs_load):
	When a log has archives (messages.1, messages.2, etc), show a
	drop-down menu to select the archive to display.

2005-05-26  Vincent Noel  <vnoel@cox.net>

	* logview.c (logview_menus_set_state): Prevent crash.

	* logrtns.c (ParseLine): Simplify.

	* logview.c (CreateMainWin): Remove the signal for row activation.
	* log_repaint.c: (handle_row_collapse_cb),
	(handle_row_expansion_cb), (DrawLogLines): Free the expanded paths
	when switching logs.
	(handle_row_activation_cb): Remove the activation callback, we're
	not doing anything with it anyway.
	(logview_draw_log_lines): Renamed a few functions for consistency,
	a little refactoring. Show the number of log lines in the status bar.

2005-05-26  Vincent Noel  <vnoel@cox.net>

	* log_repaint.c (DrawLogLines): Fill the model before setting it
	in the treeview.
	(handle_row_expansion_cb, handle_row_collapse_cb, DrawLogLines):
	Remember which rows are expanded when switching logs.

	* logview.c (logview_calendar_set_state, logview_menus_set_state):
	Hide the calendar when there is no date info in the log.
	* logview.h: Remove calendar_dialog.
	* logrtns.c (ReadLogStats): Speed loading up when there's no date
	in the log.